--- a/pocetna.html
+++ b/pocetna.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pocetna</title>
     <link rel="stylesheet" type="text/css" href="styles/pocetna.css">
-    <link rel="stylesheet" type="text/css" href="styles/jquery-ui.css">
 </head>
 
 <body>
@@ -69,7 +68,7 @@
 </div>
     <div class="div-1">
       <h1>Forma za porucivanje</h1>
-      <form name="forma" onsubmit="return validirajFormu(), hidden" id="forma">
+      <form name="forma" onsubmit="return validirajFormu()" id="formaPor">
           <label for="imePrezime">Ime i prezime:</label>
           <br>
           <input type="text" id="imePrezime">
@@ -104,9 +103,7 @@
           <label for="queen">Queen size</label>
           <br>
           <input type="radio" id="s" name="velicina" value="small">
-          <label for="King">Small size</label><br>
-          <input type="radio" id="si" name="velicina" value="single">
-          <label for="queen">Single size</label>
+          <label for="small">Small single size</label>
           <br>
           <span>Željeni nacin placanja</span>
           <select name="nacinPlacanja" id="nacinPlacanja">
@@ -132,9 +129,7 @@
   </div>
 </div>
 
-<h2 class="demoHeaders">Datepicker</h2>
-<div id="datepicker"></div>
+
 <script src="js/pocetna.js"></script>
-<script src="js/jquery-ui.js"></script>
 </body>
 </html>
