--- a/pocetna.html
+++ b/pocetna.html
@@ -95,15 +95,15 @@
           <br>
           <input type="text" id="adresa">
           <br>
-          <label for="velicina">Velicina:</label>
+          <label for="velicina">Visina duseka:</label>
           <br>
-          <input type="radio" id="ks" name="velicina" value="king" checked>
-          <label for="King">King size</label><br>
-          <input type="radio" id="qs" name="velicina" value="queen">
-          <label for="queen">Queen size</label>
+          <input type="radio" id="velika" name="velicina" value="large" checked>
+          <label for="large">30 cm</label><br>
+          <input type="radio" id="srednja" name="velicina" value="medium">
+          <label for="medium">26cm</label>
           <br>
-          <input type="radio" id="s" name="velicina" value="small">
-          <label for="small">Small single size</label>
+          <input type="radio" id="mala" name="velicina" value="small">
+          <label for="small">22cm</label>
           <br>
           <span>Željeni nacin placanja</span>
           <select name="nacinPlacanja" id="nacinPlacanja">
