--- a/kontakt.html
+++ b/kontakt.html
@@ -10,7 +10,7 @@
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     
         <script>
-            $(function(){
+            $(document).ready(function(){
         $("#datepicker").datepicker();
     });
         </script>
