--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <div class="navigacija">
             <ul>
-                <li><a class="active" href="pocetna.html">Početna</a></li>
+                <li><a class="active" href="index.html">Početna</a></li>
                 <li><a href="katalog.html">Katalog</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
                 <li><a  href="ONama.html">O Nama</a></li>
