--- a/ONama.html
+++ b/ONama.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="navigacija">
             <ul>
-                <li><a href="pocetna.html">Početna</a></li>
+                <li><a href="index.html">Početna</a></li>
                 <li><a href="katalog.html">Katalog</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
                 <li><a class="active" href="ONama.html">O Nama</a></li>
